# fv2026

./: .cspell.jsonc  .gitconfig  .gitignore  .insitu.yml  .markdownlint-cli2.jsonc  .prettierrc  CONTRIBUTING.md  Makefile  README.md  default.code-workspace  go.mod  go.sum  main.go  pyproject.toml  sitemix  web-scraber-rag
.devcontainer/: devcontainer.json  postCreateCommand.sh
.dict/: repo.dictionary
.github/: copilot-instructions.md
.github/actions/build-go-binaries/: action.yml
.github/actions/prep-runner/: action.yml
.github/instructions/: web-scraper-rag-tool.instructions.md  workflow-and-githooks.instructions.md
.github/workflows/: copilot-setup-steps.yml  copilot.yml  pr-to-ready.yml  ready.yml  release.yml
.scripts/: darwin.install  trunk-worthy
.sitemix/: fv2026.yaml  lakruzz.yaml  lakruzz2.yaml
.web-scraber-rag/: fv2026.yaml  lakruzz.yaml
cmd/: mkissue.go  root.go
cmd/mkissue/: mkissue.go  mkissue_test.go
config/: parties.yaml
docs/: ready_pusher.md
src/sitemix/: __init__.py  __main__.py  cli.py  config.py  crawler.py
src/web_scraper_rag/: __init__.py  __main__.py  cli.py  config.py  crawler.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_crawler.py
